# vulnscan

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
dashboard/: app.js  index.html  styles.css
dashboard/data/: index.json  internal-api.json  sample-web-app.json  vulnscan.json
skills/bad-practices/: SKILL.md
skills/dependency-audit/: SKILL.md
skills/secrets/: SKILL.md
src/vulnscan/: __init__.py  cli.py
src/vulnscan/core/: models.py  registry.py  report.py  runner.py
src/vulnscan/scanners/: __init__.py  bad_practices.py  base.py  dependency_audit.py  secrets.py
tests/: test_report.py  test_scanners.py
