[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscan"
version = "0.1.0"
description = "Scan projects for known vulnerabilities, vulnerable dependencies, and insecure coding practices."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gary Febbrarino" }]
keywords = ["security", "sast", "vulnerability", "scanner", "osv", "secrets"]
dependencies = []  # standard library only

[project.scripts]
vulnscan = "vulnscan.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
